--- a/src/app/order/admin-view/order-admin-view.component.html
+++ b/src/app/order/admin-view/order-admin-view.component.html
@@ -55,7 +55,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let o of orders">
+                  <tr *ngFor="let o of orders" (click)="handleViewDetail(o)">
                     <td>{{o.username}}</td>
                     <td class="text-center" [ngClass]="o.paid === true ? 'text-success' : 'text-danger'">{{o.paid ? 'Đã thanh toán' : 'Chưa thanh toán'}}</td>
                     <td class="text-center" [ngClass]="o.status === 'Thành Công' ? 'text-success' : 'text-warning'">{{o.status}}</td>
