--- a/src/app/classes/schedules/schedule.component.html
+++ b/src/app/classes/schedules/schedule.component.html
@@ -29,8 +29,9 @@
           <td class="text-center">
             <div class="button-action">
                 <div>
-                  <button *ngIf="s.status === 'NOT_YET'" class="btn btn-success" aria-label="Attend" (click)="attend(s.id)">
-                    <i class="fa-solid fa-check"></i>
+                  <button *ngIf="trainDateIsToday(s)" class="btn btn-success" aria-label="Attend" (click)="attend(s)">
+                    <!-- <i class="fa-solid fa-check"></i> -->
+                    Điểm danh
                   </button>
                 </div>
               </div>
