--- a/src/app/classes/view-admin/view-class-admin.component.html
+++ b/src/app/classes/view-admin/view-class-admin.component.html
@@ -20,9 +20,9 @@
                     </option>
                   </select> -->
                 </div>
-                <button style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
+                <!-- <button style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
                   Thêm lớp
-                </button>
+                </button> -->
               </div>
             </div>
             <div class="table-responsive" style="min-height: 300px;">
@@ -53,7 +53,7 @@
                           <i class="fa-solid fa-graduation-cap"></i>
                         </button>
                       </div>
-                      <div>
+                      <div *ngIf="me.role.id !== 4">
                         <button class="btn btn-primary mr-2" aria-label="View schedules" (click)="handleViewSchedule(c)">
                           <i class="fa-solid fa-calendar-days"></i>
                         </button>
